--- a/SYMFONY/templates/base.html.twig
+++ b/SYMFONY/templates/base.html.twig
@@ -12,6 +12,7 @@
         {% endblock %}
     </head>
     <body>
+    {% include "./base/nav.html.twig" %}
         {% block body %}{% endblock %}
     </body>
 </html>
