--- a/SYMFONY/templates/base.html.twig
+++ b/SYMFONY/templates/base.html.twig
@@ -12,7 +12,8 @@
         {% endblock %}
     </head>
     <body>
-    {% include "./base/nav.html.twig" %}
+    
+    {% include "./base/nave.html.twig" %}
         {% block body %}{% endblock %}
     </body>
 </html>
