--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -37,14 +37,16 @@
 .flipperBack h4 {
   color: #2678d1;
   font-size: 32px;
+  margin-bottom: 10px;
 }
 .flipperBack p {
   color: #2678d1;
-  font-size: 32px;
+  font-size: 21px;
+  padding: 10px;
 }
 .flipperFront img {
   width: 300px;
-  height: 450px;
+  height: 300px;
   border-radius: 30px 30px 0px 0px;
 }
 
@@ -57,7 +59,7 @@
 
 .flipper {
   width: 300px;
-  height: 600px;
+  height: 400px;
   position: relative;
   transform-style: preserve-3d; /*indique que les enfant doivent être rendu en 3D (flipperFront Et Back)*/
   transition: transform 0.8s; /*transition fluide*/
