Changement de l'organisation des templates, formulaire client connu ou non effectuer et  fonctionnel non sécuriser et sans front

--- a/SYMFONY/templates/base/blueBar.html.twig
+++ b/SYMFONY/templates/base/blueBar.html.twig
@@ -1,4 +1,5 @@
-
-<div class=""> 
-    <h2> {{ titre }}</h2>
+<div class="titleDiv">
+    <div class="blueBar"> 
+        <h2> {{ titre }}</h2>
+    </div>
 </div>
