--- a/SYMFONY/templates/registration/register.html.twig
+++ b/SYMFONY/templates/registration/register.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Register</h1>
      {{ form_start(registrationForm) }}
-    {{form(registrationForm)}}
+    {# {{form(registrationForm)}} #}
 
     {{ form_errors(registrationForm) }}
 
