--- a/SYMFONY/templates/registration/register.html.twig
+++ b/SYMFONY/templates/registration/register.html.twig
@@ -1,3 +1,5 @@
+{# registration/register.html.twig #}
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Register{% endblock %}
@@ -8,15 +10,22 @@
     {{ form_errors(registrationForm) }}
 
     {{ form_start(registrationForm) }}
-    {{ form_row(registrationForm.roles, {'value': registrationForm.roles.vars.data | json_encode}) }}
-     {{ form_row(registrationForm.name) }}
-      {{ form_row(registrationForm.firstname) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+    
+    {# Afficher le champ de sélection des rôles #}
+    {{ form_label(registrationForm.roles) }}
+    {{ form_widget(registrationForm.roles, { 'attr': {'class': 'form-control'} }) }}
+    {{ form_errors(registrationForm.roles) }}
 
-        <button type="submit" class="btn">Register</button>
+    {# Autres champs du formulaire #}
+    {{ form_row(registrationForm.name) }}
+    {{ form_row(registrationForm.firstname) }}
+    {{ form_row(registrationForm.email) }}
+    {{ form_row(registrationForm.plainPassword, {
+        label: 'Password'
+    }) }}
+    {{ form_row(registrationForm.agreeTerms) }}
+
+    <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
+
