--- a/SYMFONY/templates/client/client.html.twig
+++ b/SYMFONY/templates/client/client.html.twig
@@ -4,6 +4,7 @@
 {% block body %}
     {% set titre = "Êtes-vous déjà client chez nous ?" %}
 	{% include "base/blueBar.html.twig" %}
+    {% include "base/flash.html.twig" %}
     <div class="formClient">
         {{form_start(form)}}
         
