--- a/SYMFONY/templates/client/demande.html.twig
+++ b/SYMFONY/templates/client/demande.html.twig
@@ -5,18 +5,22 @@
 
 	{% set titre = "Demande d'opération de nettoyage" %}
 	{% include "base/blueBar.html.twig" %}
+	{% include "base/flash.html.twig" %}
+
 	<div class="formClient">
+		<a href="{{path('client')}}" class="btnBack btn">Retour</a>
 		{{form_start(form)}}
 		<div>
 			<div class="doubleChamp">
 				{{ form_row(form.client.name)}}
 				{{ form_row(form.client.firstname)}}
+
 			</div>
 			{{ form_row(form.client.mail)}}
 		</div>
 
 		<div>
-			<p>Adesse :
+			<p class="titleForm">Adesse :
 			</p>
 			<div class="doubleChamp">
 				{{ form_row(form.adresse.number)}}
@@ -29,7 +33,7 @@
 			{{ form_row(form.adresse.country)}}
 		</div>
 		<div>
-			<p>
+			<p class="titleForm">
 				Votre demande :</p>
 			{{ form_row(form.operation.type)}}
 			{{ form_row(form.operation.dateForecast)}}
