--- a/SYMFONY/templates/client/mail.html.twig
+++ b/SYMFONY/templates/client/mail.html.twig
@@ -4,7 +4,9 @@
 {% block body %}
     {% set titre = "Qui êtes-vous ?" %}
 	{% include "base/blueBar.html.twig" %}
+    {% include "base/flash.html.twig" %}
     <div class="formClient">
+        <a href="{{path('client')}}" class=" btn btnBack">Retour</a>
         {% for message in app.flashes('danger') %}
         <div class="alert">
         {{ message }}
