--- a/SYMFONY/templates/client/description.html.twig
+++ b/SYMFONY/templates/client/description.html.twig
@@ -5,11 +5,11 @@
     {% set titre = "Description de votre demande" %}
 	{% include "base/blueBar.html.twig" %}
     <div class="formClient">
+        <a href="{{path('getClient')}}" class=" btn btnBack">Retour</a>
         {{form_start(form)}}
         {{form_row(form.type)}}
         {{form_row(form.dateForecast)}}
         {{form_row(form.description)}}
-        <button type="submit">Envoyer</button>
         {{form_end(form)}}
     </div>
 
