Controle si client existe  et vérification de l'adresse, changement si necessaire

--- a/SYMFONY/templates/base/flash.html.twig
+++ b/SYMFONY/templates/base/flash.html.twig
@@ -1,5 +1,5 @@
 {% for type, messages in app.flashes %}
 <div class="flash {{ type }}"> 
-    {{ messages | join('. ') }}
+    <p class="messageFlash">{{ messages | join('. ') }}</p> 
 </div>
 {% endfor %}
