--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -1,103 +1,122 @@
-
 /* blueBar */
-.titleDiv{
-    display: flex;
-    justify-content: center;
+.titleDiv {
+  display: flex;
+  justify-content: center;
 }
-.blueBar{
-    width: 1000px;
-    background-color:#2678D1;
-    padding: 0.5%;
-    padding-left: 5%;
-    border-radius: 0 150px 0 0;
-    margin: 2%;
-} 
+.blueBar {
+  width: 1000px;
+  background-color: #2678d1;
+  padding: 0.5%;
+  padding-left: 5%;
+  border-radius: 0 150px 0 0;
+  margin: 2%;
+}
 .blueBar h2 {
-    color:white;
-    font-size: 30px;
+  color: white;
+  font-size: 30px;
+}
+
+/* Message Flash */
+.messageFlash{
+    font-size: 20px;
+}
+.flash{
+    text-align: center;
+}
+.error{
+background-color: #F88170;
+}
+.success{
+background-color: #BBF7D4;
 }
 
 /* Formulaire */
-.titleForm{
-    font-size: 20px;
+.titleForm {
+  font-size: 20px;
 }
-input{
-    width: 300px;
-    height: 30px;
+input {
+  width: 300px;
+  height: 30px;
 }
-textarea{
-    width: 600px;
-    height: 200px;
+textarea {
+  width: 600px;
+  height: 200px;
 }
-select, .widgetDate{
-    width: 300px;
-    height:30px;
-    font-size: 20px;
-    padding-left: 20px;
+select,
+.widgetDate {
+  width: 300px;
+  height: 30px;
+  font-size: 20px;
+  padding-left: 20px;
 }
-.radioInput{
-    width: 20px;
-    height: 20px;
-    box-shadow: none;
-}
-
-input, textarea,select{
-    border: none;
-    box-shadow:0px 4px 4px #85BA22;
-    border-radius: 20px;
-    margin-bottom: 10px;
-}
-input,textarea,select:focus{
-    outline: none;
-    border:#85BA22 1px;
-    font-size: 20px;
+.radioInput {
+  width: 20px;
+  height: 20px;
+  box-shadow: none;
 }
 
-.divInput{
-    width:350px;
+input,
+textarea,
+select {
+  border: none;
+  box-shadow: 0px 4px 4px #85ba22;
+  border-radius: 20px;
+  margin-bottom: 10px;
 }
-.divLabel, .divInput {
-    margin-bottom: 20px;
+input,
+textarea,
+select:focus {
+  outline: none;
+  border: #85ba22 1px;
+  font-size: 20px;
 }
-label{
-    font-size: 20px;
+
+.divInput {
+  width: 350px;
 }
-.doubleChamp{
-    display: flex;
+.divLabel,
+.divInput {
+  margin-bottom: 20px;
 }
-.formClient{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+label {
+  font-size: 20px;
 }
-.divBtnSend{
-    display: flex;
-    justify-content: center;
-    margin: 20px;
+.doubleChamp {
+  display: flex;
 }
-.btn{
-    background-color: #2678D1;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    font-size: 20px;
-    box-shadow: 0px 4px 4px #4a4a4a;
-    font-weight: bold;
+.formClient {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.btnSend{
-    border-radius: 10px;
-    font-size: 31px;
-    padding:20px;
-    width: 300px;
+.divBtnSend {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
 }
-.btnBack{
-    padding: 0.5%;
-    text-decoration: none;
-    margin-left: 11%;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    align-self: flex-start;
+.btn {
+  background-color: #2678d1;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  font-size: 20px;
+  box-shadow: 0px 4px 4px #4a4a4a;
+  font-weight: bold;
+}
+.btnSend {
+  border-radius: 10px;
+  font-size: 31px;
+  padding: 20px;
+  width: 300px;
+}
+.btnBack {
+  padding: 0.5%;
+  text-decoration: none;
+  margin-left: 11%;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  align-self: flex-start;
 }
 .btn:hover {
-    box-shadow: 0px 4px 4px #4a4a4a inset;
-  }
+  box-shadow: 0px 4px 4px #4a4a4a inset;
+}
