--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -1,3 +1,89 @@
-body {
-    background-color: skyblue;
+
+/* operation */
+
+.navbarOp {
+    height: 125px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.navbarE {
+    background-color: #77B800;
+    margin-right: auto;
+    margin-left: auto;
+    height: 121px;
+    width: 1596px;
+    display: flex;
+    align-items: center;
+    border-radius: 1cqmax;
+    justify-content: center;
+}
+.navE-links {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex; 
+}
+.navE-links li {
+    padding: 10px 20px;
+    margin-right: 35px;
+}
+.navE-links li a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    font-family: bold italic;
+    font-size: 20px;
+}
+.navE-links li a:hover {
+    color: #000;
+    background-color: #fff;
+}
+.custom-block {
+    
+    margin: 0 auto;
+    display: flex;
+    width: 1596px;
+    height: 100px;
+    justify-content: space-around;
+    align-items: center;
+    border: solid;
+}
+.custom-block img {
+    margin-right: 10px;
+}
+.custom-block .date {
+    margin-right: 10px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.custom-block .status {
+    margin-right: 10px;
+    color: red;
+}
+.custom-block .description {
+    margin-right: 10px;
+    color: #2678D1;
+    margin-top: -5px;
+}
+
+
+.custom-block .buttonOp {
+    background-color: #2678D1;
+    width: 214.61px;
+    height: 43px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.3s ease-in-out;
+    color: #fff;
+}
+
+.custom-block .buttonOp:hover {
+    background-color: #205084; 
+}
+
+
+.contourOp{
+    margin-top: 5%;
 }
