--- a/SYMFONY/templates/client/description.html.twig
+++ b/SYMFONY/templates/client/description.html.twig
@@ -9,7 +9,7 @@
         {{form_start(form)}}
         {{form_row(form.type)}}
         {{form_row(form.dateForecast)}}
-        {{form_row(form.description)}}
+        {{form_row(form.description,{'attr':{'placeholder':"Description de votre demande..."}})}}
         {{form_end(form)}}
     </div>
 
