--- a/SYMFONY/templates/form/custom_theme.html.twig
+++ b/SYMFONY/templates/form/custom_theme.html.twig
@@ -1,3 +1,5 @@
+{% use 'bootstrap_5_layout.html.twig'%}
+
 {% block form_label %}
 	<div class="divLabel">
 		<label {{ block('attributes') }}>{{ label }}</label>
