Ajout route entre home et page formulaire

--- a/SYMFONY/templates/home/home.html.twig
+++ b/SYMFONY/templates/home/home.html.twig
@@ -36,6 +36,6 @@
 
   {# btn devis #}
   <div class="divIntro">
-    <a class="btnDevis" href="">DEMANDER VOTRE DEVIS</a>
+    <a class="btnDevis" href="{{ path('client')}}">DEMANDER VOTRE DEVIS</a>
   </div>
 </div>
