--- a/SYMFONY/templates/liste.html.twig
+++ b/SYMFONY/templates/liste.html.twig
@@ -1,30 +1,53 @@
 {% extends 'base.html.twig' %}
 
+{% block body %}
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-
-{% block body %}<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-    <div class="navbarLi">
+<div class="navbarLi">
         
-    </div>
+</div>
     
-    <nav class="navbarL">
-        <ul class="navL-links">
-            <li><a href="#">Opérations</a></li>
-            <li><a href="#">Ma Liste</a></li>
-            <li><a href="#">Ajout Opération</a></li>
-            <li><a href="#">Liste Personnel</a></li>
-            <li><a href="#">Ajout Personnel</a></li>
-            <li><a href="#">Statistique</a></li>
-            <li><a href="#">Répertoire</a></li>
-        </ul>
-    </nav>
+<nav class="navbarL">
+    <ul class="navL-links">
+        <li><a href="#">Opérations</a></li>
+        <li><a href="#">Ma Liste</a></li>
+        <li><a href="#">Ajout Opération</a></li>
+        <li><a href="#">Liste Personnel</a></li>
+        <li><a href="#">Ajout Personnel</a></li>
+        <li><a href="#">Statistique</a></li>
+        <li><a href="#">Répertoire</a></li>
+    </ul>
+</nav>
 
-    {% set titre = "Liste de vos taches en cours" %}
-    {% include 'base/blueBar.html.twig' %}
+{% set titre = "Liste de vos taches en cours" %}
+{% include 'base/blueBar.html.twig' %}
 
 <html lang="en">
+    <div class="table-containerL">
+        <table class="tableL">
+            <thead>
+                <tr>
+                    <th class="clientL">Client</th>
+                    <th class="typeOperationL">Type d'opération</th>
+                    <th class="prioriteL">Priorité</th>
+                    <th class="statutL">Statut</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for operation in operationsEnCours %}
+                <tr>
+                    <td>{{ operation.client }}</td>
+                    <td>{{ operation.type }}</td>
+                    <td>{{ operation.priorite }}</td>
+                    <td>{{ operation.statut }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
+    {% set titre = "Liste de vos taches terminées" %}
+    {% include 'base/blueBar.html.twig' %}
 
     <div class="table-containerL">
         <table class="tableL">
@@ -37,65 +60,16 @@
                 </tr>
             </thead>
             <tbody>
-                
-            </tbody>
-        </table>
-    </div>
-    <div class="table-containerL">
-        <table class="tableL">
-            <thead>
+                {% for operation in operationsTerminees %}
                 <tr>
-                    <th class="clientL">Name</th>
-                    <th class="typeOperationL">Grosse</th>
-                    <th class="prioriteL">High</th>
-                    <th class="statutL">En cours <span class="material-symbols-outlined arrow-icon">arrow_drop_down</span><button class="buttonTerminer">Terminer</button></th>
-
+                    <td>{{ operation.client }}</td>
+                    <td>{{ operation.type }}</td>
+                    <td>{{ operation.priorite }}</td>
+                    <td>{{ operation.statut }}</td>
                 </tr>
-            </thead>
-            <tbody>
-                
+                {% endfor %}
             </tbody>
         </table>
     </div>
-
-    {% set titre = "Liste de vos taches terminés" %}
-    {% include 'base/blueBar.html.twig' %}
-
-<html lang="en">
-
-
-    <div class="table-containerL">
-        <table class="tableL">
-            <thead>
-                <tr>
-                    <th class="clientL">Client</th>
-                    <th class="typeOperationL">Type d'opération</th>
-                    <th class="prioriteL">Priorité</th>
-                    <th class="statutL">Statut</th>
-                </tr>
-            </thead>
-            <tbody>
-                
-            </tbody>
-        </table>
-    </div>
-    <div class="table-containerL">
-        <table class="tableL">
-            <thead>
-                <tr>
-                    <th class="clientL">Name</th>
-                    <th class="typeOperationL">Grosse</th>
-                    <th class="prioriteL">High</th>
-                    <th class="statutL2" >Terminer</th>
-
-                </tr>
-            </thead>
-            <tbody>
-                
-            </tbody>
-        </table>
-    </div>
-
-
-
+</html>
 {% endblock %}
