--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -2,6 +2,8 @@
 @import url("https ://fonts.googleapis.com/css2 ?family=Lato :wght@400 ; 700; 900&family=Roboto :ital,wght@0,100 ; 0,300; 0,400; 0,500; 0,700; 0,900; 1,100; 1,300; 1,400; 1,500; 1,700; 1 900&display=swap");
 /* Global  */
 p,
+a,
+button,
 h1,
 h2,
 h3,
@@ -609,6 +611,11 @@ button:hover {
  }
  .btnSup{
   background-color: #ED3939;
+  width: auto; 
+  height: auto;
+ }
+ .btnSup:hover{
+  background-color:#ED3939 ;
  }
 /* pagination liste personnel*/
  .pagination{
