--- a/SYMFONY/templates/employe/admin/modifier.html.twig
+++ b/SYMFONY/templates/employe/admin/modifier.html.twig
@@ -2,11 +2,24 @@
 
 {% block title %}Modifier employé{% endblock %}
 
-{% block body %}
-{% set titre = 'Modifier '~user.name~' '~user.firstname %}
-{% include "base/blueBar.html.twig" %}
 
-{{form_start(form)}}
-{{form_end(form)}}
+{% block body %}
+
+    <pre>
+        {{ dump(nom) }}
+    </pre>
+
+    {% set titre = 'Modifier '~user.name~' '~user.firstname %}
+    {% include "base/blueBar.html.twig" %}
+
+<div class="formClient">
+<a href="{{path('admin.listePersonnel')}}" class="btnBack btn">Retour</a>
+    {{form_start(form)}}
+        {{form_row(form.name, { 'value': nom })}}
+		{{form_row(form.firstname, {'attr':{'placeholder':user.firstname}})}}
+        {{form_row(form.email)}}
+        {# {{form_row(form.roles)}} #}
+    {{form_end(form)}}
+</div>
 
 {% endblock %}
