--- a/SYMFONY/templates/employe/admin/modifier.html.twig
+++ b/SYMFONY/templates/employe/admin/modifier.html.twig
@@ -5,20 +5,16 @@
 
 {% block body %}
 
-    <pre>
-        {{ dump(nom) }}
-    </pre>
-
     {% set titre = 'Modifier '~user.name~' '~user.firstname %}
     {% include "base/blueBar.html.twig" %}
 
 <div class="formClient">
-<a href="{{path('admin.listePersonnel')}}" class="btnBack btn">Retour</a>
+    <a href="{{path('admin.listePersonnel')}}" class="btnBack btn">Retour</a>
     {{form_start(form)}}
-        {{form_row(form.name, { 'value': nom })}}
+        {{form_row(form.name, {'attr':{'value':nom}})}}
 		{{form_row(form.firstname, {'attr':{'placeholder':user.firstname}})}}
         {{form_row(form.email)}}
-        {# {{form_row(form.roles)}} #}
+        {{form_row(form.roles, {'attr':{'placeholder':user.firstname}})}}
     {{form_end(form)}}
 </div>
 
