--- a/SYMFONY/templates/liste.html.twig
+++ b/SYMFONY/templates/liste.html.twig
@@ -29,17 +29,17 @@
                 <tr>
                     <th class="clientL">Client</th>
                     <th class="typeOperationL">Type d'opération</th>
-                    <th class="prioriteL">Priorité</th>
-                    <th class="statutL">Statut</th>
+                    <th class="statut">Statut</th>
                 </tr>
             </thead>
             <tbody>
                 {% for operation in operationsEnCours %}
                 <tr>
-                    <td>{{ operation.client }}</td>
-                    <td>{{ operation.type }}</td>
-                    <td>{{ operation.priorite }}</td>
-                    <td>{{ operation.statut }}</td>
+                    <td class="clientL">{{ operation.client.name }}</td> {# Afficher le nom du client #}
+                    <td class="typeOperationL">{{ operation.type.name }}</td> 
+                    <td class="statutL">{{ operation.statut }} 
+                        <button class="buttonTerminer">Terminer</button>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -55,20 +55,18 @@
                 <tr>
                     <th class="clientL">Client</th>
                     <th class="typeOperationL">Type d'opération</th>
-                    <th class="prioriteL">Priorité</th>
                     <th class="statutL">Statut</th>
                 </tr>
             </thead>
-<tbody>
-    {% for operation in operationsEnCours %}
-    <tr>
-        <td>{{ operation.description }}</td>
-        <td>{{ operation.statut }}</td>
-        <td>{{ operation.dateForecast|date('Y-m-d') }}</td>
-        <!-- Affichez d'autres propriétés si nécessaire -->
-    </tr>
-    {% endfor %}
-</tbody>
+            <tbody>
+                {% for operation in operationsTerminees %}
+                <tr>
+                    <td class="clientL">{{ operation.client.name }}</td>
+                    <td class="typeOperationL">{{ operation.type.name }}</td>
+                    <td class="statutL">{{ operation.statut }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
         </table>
     </div>
 </html>
