--- a/SYMFONY/templates/employe/admin/modifier.html.twig
+++ b/SYMFONY/templates/employe/admin/modifier.html.twig
@@ -12,10 +12,10 @@
     <a href="{{path('admin.listePersonnel')}}" class="btnBack btn">Retour</a>
     {{form_start(form)}}
 
-        {{form_row(form.name, {'attr':{'value':nom}})}}git 
-		{{form_row(form.firstname, {'attr':{'placeholder':user.firstname}})}}
+        {{form_row(form.name, {'attr':{'value':nom}})}}
+		{{form_row(form.firstname, {'attr':{'value':prenom}})}}
         {{form_row(form.email)}}
-        {{form_row(form.roles, {'attr':{'placeholder':user.firstname}})}}
+        {{form_row(form.roles, {'attr':{'value':role}})}}
     {{form_end(form)}}
 </div>
 
