--- a/SYMFONY/templates/employe/admin/listePersonnel.html.twig
+++ b/SYMFONY/templates/employe/admin/listePersonnel.html.twig
@@ -5,6 +5,9 @@
 
 	{% set titre = "Liste du personnel" %}
 	{% include "base/blueBar.html.twig" %}
+
+	{% include "base/flash.html.twig" %}
+
 	<div class="divTable">
 		<table class="tableListePersonnel">
 			<thead>
@@ -23,37 +26,38 @@
 					<td>
 						<div class="divTableBtn">
 							<a href="{{ path('admin.modifierPersonel', { id: user.id })}}" class="btn btnBack btnModif">Modifier</a>
-							<button class="btn btnSup btnModif">Supprimer</button>
+							<a href='{{path('admin.delete', {id:user.id})}}' onclick="return confirm('Êtes-bvous sûr de vouloir supprimer cet employé ?')" class="btn btnSup btnModif">Supprimer</a>
 						</div>
 					</td>
 				</tr>
 
 			{% endfor %}
 		</table>
-	<div class="pagination">
-		{% if page > 1 %}
-			<a href="{{ path('admin.listePersonnel', {page:page-1})}}" class="btn btnPagination">Page précédente</a>
-		{% endif %}
-		{% if page == 1 %}
-			<a href="" class="btn btnPagination pageActuelle" >Page min : 1</a>
-		{% endif %}
+		<div class="pagination">
+			{% if page > 1 %}
+				<a href="{{ path('admin.listePersonnel', {page:page-1})}}" class="btn btnPagination">Page précédente</a>
+			{% endif %}
+			{% if page == 1 %}
+				<a href="" class="btn btnPagination pageActuelle">Page min : 1</a>
+			{% endif %}
 
 
-		{% if page is not same as 1 %}
-			<a href="{{ path('admin.listePersonnel', {page:1})}}" class="btn btnPagination">1</a>
-		{% endif %}
+			{% if page is not same as 1 %}
+				<a href="{{ path('admin.listePersonnel', {page:1})}}" class="btn btnPagination">1</a>
+			{% endif %}
 
-		<a href="{{ path('admin.listePersonnel', {page:page})}}" class="btn btnPagination pageActuelle">{{page}}</a>
+			<a href="{{ path('admin.listePersonnel', {page:page})}}" class="btn btnPagination pageActuelle">{{page}}</a>
 
 
-		{% if page < maxPage %}
-			<a href="{{ path('admin.listePersonnel', {page:page+1})}}" class="btn btnPagination">Page suivante</a>
-		{% endif %}
-        {% if page == maxPage %}
-        			<a href="" class="btn btnPagination pageActuelle" >Page max : {{maxPage}}</a>
-        {% endif %}
-        
+			{% if page < maxPage %}
+				<a href="{{ path('admin.listePersonnel', {page:page+1})}}" class="btn btnPagination">Page suivante</a>
+			{% endif %}
+			{% if page == maxPage %}
+				<a href="" class="btn btnPagination pageActuelle">Page max :
+					{{maxPage}}</a>
+			{% endif %}
 
-	</div>
+
+		</div>
 	</div>
 {% endblock %}
