--- a/SYMFONY/templates/base.html.twig
+++ b/SYMFONY/templates/base.html.twig
@@ -7,8 +7,9 @@
 			{% endblock %}
 		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"> {% block stylesheets %}{% endblock %}
-
-
+{% block header %}
+{{ include("/navbar/index.html.twig") }}
+{% endblock %}
 		{% block javascripts %}
 			{% block importmap %}
 				{{ importmap('app') }}
@@ -16,8 +17,9 @@
 		{% endblock %}
 	</head>
 	<body>
+	
 		{% block body %}
-			{% include "home/home.html.twig" %}
+			{% include "home/home.html.twig" %}		
 		{% endblock %}
 	</body>
 
